@@ -4,6 +4,12 @@ For more information on past and future Lucene versions, please see:
 http://s.apache.org/luceneversions
 ======================= Lucene 4.8.0 =======================
 
+Bug fixes
+
+* LUCENE-5450: Fix getField() NPE issues with SpanOr/SpanNear when they have an 
+  empty list of clauses. This can happen for example,  when a wildcard matches 
+  no terms.  (Tim Allison via Robert Muir)
+
 ======================= Lucene 4.7.0 =======================
 
 New Features
